Construction en cours

--- a/messagerie.html
+++ b/messagerie.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nebula</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/messagerie.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html"><h1>Nebula</h1></a>
+    <a href="index.html" ><h1>Nebula</h1></a>
     <button id="parametres"><img src="settings_48.png" alt="Paramètres"></button>
-    <a href="messagerie.html"><button id="message"><img src="outline_chat_white_24dp.png">chat</img></button></a>
+    <button id="message"><img src="outline_chat_white_24dp.png">chat</img></button>
+    <div id="chat1"></div>
+    <div id="chat2"></div>
 </body>
 </html>
