--- a/messagerie.html
+++ b/messagerie.html
@@ -11,9 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="index.html" ><h1>Nebula</h1></a>
-    <button id="parametres"><img src="settings_48.png" alt="Paramètres"></button>
-    <button id="message"><img src="outline_chat_white_24dp.png">chat</img></button>
+    <header>
+        <p>Connexion à Nebula</p>
+    </header>
+
+    <!-- Menu de navigation -->
+    <nav class="menu">
+        <ul>
+            <li class="btn"><a href="index.html">Nebula</a></li>
+            <li class="btn"><a href="messagerie.html"><img class="messagerie" src="outline_chat_white_24dp.png"></a></li>
+            <li class="btn"><a href="http://google.com" target="_blank"><img src="settings_48.png" alt="Paramètres"></a></li>
+        </ul>
+    </nav>
+    <div class="menu"></div>
     <div id="chat1"></div>
     <div id="chat2"></div>
 </body>
